<resources>
    <string name="app_name">Mi Formulario</string>
    <string name="nombre">Nombre completo</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="descripcion">Descripción</string>
    <string name="ok">Seleccionar fecha</string>
    <string name="siguiente">Siguiente</string>
    <string name="editar">Editar</string>
</resources>